--- a/guide/elements/form.html
+++ b/guide/elements/form.html
@@ -113,10 +113,10 @@
             <!-- [D] disabled 상태 -->
             <input type="text" class="h-input sm" value="disabled" disabled="disabled" />
             <!-- [D] error 상태 -->
-            <div class="input-set col sm error">
+            <!-- <div class="input-set col sm error">
                 <input type="text" class="h-input" value="error" />
                 <p class="note">Error Message</p>
-            </div>
+            </div> -->
         </div>
         <div class="g-example-foot">
             <pre><code class="html">
