--- a/pages/SA/SA010102_01.html
+++ b/pages/SA/SA010102_01.html
@@ -22,10 +22,10 @@
         </div>
         <div data-role="dialog"
              data-title="사용자 등록"
-             data-width="720"
              data-modal="false"
              data-bind="dialogOpen: isVisible,
-                            events: { close: onClose}">
+                            events: { close: onClose}"
+            class="md">
             <div class="content-group">
                 <div class="table">
                     <table>
