--- a/pages/SA/SA010102_02.html
+++ b/pages/SA/SA010102_02.html
@@ -23,10 +23,10 @@
 
         <div data-role="dialog"
              data-title="거래처정보 등록"
-             data-width="720"
              data-modal="false"
              data-bind="dialogOpen: isVisible,
-                            events: { close: onClose}">
+                            events: { close: onClose}"
+            class="md">
             <div class="content-group">
                 <div class="table">
                     <table>
