--- a/guide/list.html
+++ b/guide/list.html
@@ -125,7 +125,7 @@
                     <td class="date_start">08-09</td>
                     <td class="date_end">08-09</td>
                     <td class="state" data-state="done"></td>
-                    <td>popup</td>
+                    <td>popup(md)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -138,7 +138,7 @@
                     <td class="date_start">08-09</td>
                     <td class="date_end">08-09</td>
                     <td class="state" data-state="done"></td>
-                    <td>popup</td>
+                    <td>popup(md)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -148,9 +148,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-10</td>
                     <td class="ex_end">08-10</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-10</td>
+                    <td class="date_end">08-10</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -161,9 +161,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-10</td>
                     <td class="ex_end">08-10</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-10</td>
+                    <td class="date_end">08-10</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -174,9 +174,9 @@
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-10</td>
                     <td class="ex_end">08-10</td>
-                    <td class="date_start"></td>
-                    <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="date_start">08-10</td>
+                    <td class="date_end">08-10</td>
+                    <td class="state" data-state="done"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -189,7 +189,7 @@
                     <td class="ex_end">08-11</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
+                    <td class="state" data-state="ing"></td>
                     <td></td>
                 </tr>
                 <tr class="">
@@ -202,8 +202,8 @@
                     <td class="ex_end">08-11</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
-                    <td>popup</td>
+                    <td class="state" data-state="ing"></td>
+                    <td>popup(md)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -215,8 +215,8 @@
                     <td class="ex_end">08-11</td>
                     <td class="date_start"></td>
                     <td class="date_end"></td>
-                    <td class="state" data-state=""></td>
-                    <td>popup</td>
+                    <td class="state" data-state="ing"></td>
+                    <td>popup(md)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -229,7 +229,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup</td>
+                    <td>popup(md)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -242,7 +242,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup</td>
+                    <td>popup(md)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -268,7 +268,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td></td>
+                    <td>popup(md)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -281,7 +281,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup</td>
+                    <td>popup(md)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -307,7 +307,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup</td>
+                    <td></td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -320,7 +320,7 @@
                     <td class="date_start"></td>
                     <td class="date_end"></td>
                     <td class="state" data-state=""></td>
-                    <td>popup</td>
+                    <td>popup(lg)</td>
                 </tr>
                 <tr class="">
                     <td class="d1">01기준정보</td>
@@ -335,10 +335,10 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class=""> 
                     <td class="d1">01기준정보</td>
                     <td class="d2">07심사조건</td>
-                    <td class="d3">02심사서류추가</td>
+                    <td class="d3">02업종공통조건</td>
                     <td class="sbid"><span class="pc">SA010702</span><span class="mo"></span></td>
                     <!-- <td class="coder">주진희</td> -->
                     <td class="ex_start">08-18</td>
@@ -348,7 +348,20 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class=""> 
+                    <td class="d1">01기준정보</td>
+                    <td class="d2">07심사조건</td>
+                    <td class="d3">03심사서류추가</td>
+                    <td class="sbid"><span class="pc">SA010703</span><span class="mo"></span></td>
+                    <!-- <td class="coder">주진희</td> -->
+                    <td class="ex_start">08-18</td>
+                    <td class="ex_end">08-18</td>
+                    <td class="date_start"></td>
+                    <td class="date_end"></td>
+                    <td class="state" data-state=""></td>
+                    <td>popup(sm)</td>
+                </tr>
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">08어플리케이션정보</td>
                     <td class="d3">01조회</td>
@@ -361,7 +374,7 @@
                     <td class="state" data-state=""></td>
                     <td></td>
                 </tr>
-                <tr class="do">
+                <tr class="">
                     <td class="d1">01기준정보</td>
                     <td class="d2">08어플리케이션정보</td>
                     <td class="d3">02등록</td>
