기준정보 > 상품정보 추가

--- a/guide/elements/button.html
+++ b/guide/elements/button.html
@@ -138,7 +138,7 @@ data-index="0">
 
     <div class="g-example-wrap">
         <div class="g-example-head">
-            <p class="title">Button group(multiple)</p>
+            <p class="title">Button Group (Year month)</p>
         </div>
         <div class="g-example-body">
            <div class="yearmonth-box">
