--- a/guide/elements/form.html
+++ b/guide/elements/form.html
@@ -316,7 +316,7 @@
 
     <div class="g-example-wrap">
         <div class="g-example-head">
-            <p class="title">Form Group</p>
+            <p class="title">File Upload</p>
         </div>
         <div class="g-example-body flex-block">
             <div class="form-set filebox">
