--- a/guide/elements/list.html
+++ b/guide/elements/list.html
@@ -192,7 +192,7 @@
 
     <div class="g-example-wrap">
         <div class="g-example-head">
-            <p class="title">Button group(multiple)</p>
+            <p class="title">List box(with label)</p>
         </div>
         <div class="g-example-body">
             <div class="title-box md mt-0">
